@@ -482,7 +482,7 @@ attribute_hidden FUNTAB R_FunTab[] = {
     {"nzchar", do_nzchar, 1, 1, 1, {PP_FUNCALL, PREC_FN, 0}},
     {"substr", do_substr, 1, 11, 3, {PP_FUNCALL, PREC_FN, 0}},
     {"substr<-", do_substrgets, 1, 11, 4, {PP_FUNCALL, PREC_FN, 0}},
-    {"strsplit", do_strsplit, 1, 11, 5, {PP_FUNCALL, PREC_FN, 0}},
+    {"strsplit", do_strsplit, 1, 11, 6, {PP_FUNCALL, PREC_FN, 0}},
     {"abbreviate", do_abbrev, 1, 11, 3, {PP_FUNCALL, PREC_FN, 0}},
     {"make.names", do_makenames, 0, 11, 2, {PP_FUNCALL, PREC_FN, 0}},
     {"grep", do_grep, 0, 11, 9, {PP_FUNCALL, PREC_FN, 0}},
