@@ -2225,7 +2225,7 @@ bar()
 
 ## string NAs shouldn't have any internal structure.(PR#3078)
 a <- c("NA", NA, "BANANA")
-na <- as.character(NA)
+na <- NA_character_
 a1 <- substr(a,1,1)
 stopifnot(is.na(a1)==is.na(a))
 a2 <- substring(a,1,1)
@@ -2257,9 +2257,13 @@ stopifnot(is.na(a7) == is.na(a))
 a8 <- a; substr(a8, 1, 2) <- na
 stopifnot(all(is.na(a8)))
 stopifnot(identical(a, toupper(tolower(a))))
-a9<-strsplit(a, "NA")
-stopifnot(identical(a9, list("",na,c("BA",""))))
-a10<-strsplit(a, na)
+a9 <- strsplit(a, "NA")
+stopifnot(identical(a9, list("", na ,c("BA",""))))
+a9 <- strsplit(a, "NA", fixed = TRUE)
+stopifnot(identical(a9, list("", na ,c("BA",""))))
+a9 <- strsplit(a, "NA", perl = TRUE)
+stopifnot(identical(a9, list("", na ,c("BA",""))))
+a10 <- strsplit(a, na)
 stopifnot(identical(a10, as.list(a)))
 ## but nchar doesn't fit this pattern
 stopifnot(all(!is.na(nchar(a))))
